Actions переделал, сделал создание объекта в конструкторе АбсКоммон